# prediction-arbitrage

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  config.example.yaml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: build-and-deploy.yml  quality-gate.yml
.specify/memory/: constitution.md
docs/: auto-execution-guide.md  backtesting-guide.md  user-guide.md  wallet-setup.md
infra/hetzner/: Caddyfile  README.md  backup.sh  bootstrap.sh
infra/scripts/: backup.sh  restore.sh
infra/terraform/: .gitignore  cloud-init.yml  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
specs/001-arb-scanner-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-arb-history-analytics/: plan.md  spec.md  tasks.md
specs/003-pgvector-embedding-prefilter/: plan.md  spec.md  tasks.md
specs/004-live-api-testing/: spec.md  tasks.md
specs/005-trend-alerting/: plan.md  spec.md  tasks.md
specs/006-dashboard-web-ui/: plan.md  spec.md  tasks.md
specs/007-local-embeddings/: plan.md  spec.md  tasks.md
specs/008-flippening-engine/: plan.md  spec.md  tasks.md
specs/009-robust-sports-discovery/: plan.md  spec.md  tasks.md
specs/010-ws-schema-validation/: plan.md  spec.md  tasks.md
specs/012-backtesting-replay/: plan.md  spec.md  tasks.md
specs/022-split-execution-paths/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/arb_scanner/: __main__.py
tests/: conftest.py
tests/e2e/: test_scan_pipeline.py
tests/live/: conftest.py  (+4 more)
(+354 files in other folders)
