[project]
name = "arb-scanner"
version = "0.1.0"
description = "Prediction market arbitrage scanner"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "pydantic>=2.0",
    "anthropic",
    "bm25s",
    "numpy",
    "asyncpg",
    "typer",
    "structlog",
    "pyyaml",
    "pgvector",
    "fastapi",
    "uvicorn[standard]",
    "fastembed",
    "websockets>=16.0",
]

[project.scripts]
arb-scanner = "arb_scanner.cli.app:app"

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "types-pyyaml>=6.0.12.20250915",
    "asyncpg-stubs>=0.31.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arb_scanner"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
strict = true
mypy_path = "src"
packages = ["arb_scanner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m \"not live\""
markers = [
    "live: requires live API access (set LIVE_TESTS=1 to run)",
]
